# libuwsc

./: .gitignore  CMakeLists.txt  Makefile  conanfile.py
example/: example.c
include/: uwsc.h
src/: config.h.in  utils.c  uwsc.c  uwsc.h
